start to fix layout on Tablets

--- a/public/css/custom-bs.css
+++ b/public/css/custom-bs.css
@@ -32,7 +32,9 @@ body {
 }
 
 #wrap > .container {
-    padding: 20px 15px;
+    padding: 20px;
+    width: auto;
+    max-width: 1170px;
 }
 
 .container .jumbotron { margin-top: 50px; height: 360px; background: transparent url(/images/logo-iGruppi_icon.png) no-repeat 145px -23px; }
@@ -56,11 +58,12 @@ body {
 a {color: #47a447;}
 a:hover, a:focus { color: #666; }
 strong { color: #000; }
-h1, h2, h3, h4, h5, h6 {color: #666; font-weight: 200; }
-h1 { font-size: 30px; }
-h2 { font-size: 24px; }
+h1, h2, h3, h4, h5, h6 {color: #777; font-weight: 200; }
+h1 { font-size: 26px; }
+h2 { font-size: 22px; }
 h3 { font-size: 20px; }
 h4, h5, h6 { margin-top: 5px; margin-bottom: 5px; }
+h1 strong, h2 strong, h3 strong, h4 strong, h5 strong, h6 strong {color: #090; font-weight: 200; }
 
 .no-margin {margin:0;}
 .big-margin-top { margin-top: 55px; }
